--- a/electronics/templates/electronics/product_detail.html
+++ b/electronics/templates/electronics/product_detail.html
@@ -24,6 +24,8 @@
                     <img class="thumbnail" src="{{ image.image.url }}" alt="Product Image">
                 {% endfor %}
             </div>
+            <a href="{% url 'conversation:new' app_label='electronics' model_name='electronic' object_id=electronic.id %}" class="start-conversation-btn"></a>
+            
             <div class="interaction-buttons">
                     <button type="button" 
                             class="interaction-button like-button" 
